--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -9,12 +9,14 @@ click==7.1.2
 colorama==0.4.4
 cssselect==1.1.0
 cssutils==2.3.0
+cycler==0.11.0
 distlib==0.3.2
 Django==3.2.5
 django-admin==1.0.2
 email-to==0.1.0
 fastapi==0.65.2
 filelock==3.0.12
+fonttools==4.28.3
 graphql-core==2.3.2
 greenlet==1.1.1
 h11==0.12.0
@@ -25,15 +27,18 @@ importlib-resources==5.4.0
 inflect==5.3.0
 isort==5.7.0
 joblib==1.0.1
+kiwisolver==1.3.2
 lazy-object-proxy==1.5.2
 lxml==4.6.3
 Mako==1.1.5
 Markdown==3.3.4
 MarkupSafe==2.0.1
+matplotlib==3.5.0
 mccabe==0.6.1
 neat-python==0.92
 nltk==3.5
 numpy==1.20.1
+packaging==21.3
 passlib==1.7.4
 pika==1.2.0
 Pillow==8.4.0
@@ -45,6 +50,8 @@ pygame==2.0.2
 PyJWT==2.1.0
 pylint==2.7.2
 pyotp==2.6.0
+pyparsing==3.0.6
+python-dateutil==2.8.2
 python-dotenv==0.18.0
 python-multipart==0.0.5
 pytz==2021.1
@@ -53,6 +60,7 @@ qrcode==7.3
 regex==2021.3.17
 requests==2.26.0
 Rx==1.6.1
+setuptools-scm==6.3.2
 six==1.16.0
 sqlacodegen==2.3.0
 SQLAlchemy==1.4.23
@@ -60,6 +68,7 @@ sqlalchemy-filters==0.12.0
 sqlparse==0.4.1
 starlette==0.14.2
 toml==0.10.2
+tomli==1.2.2
 tqdm==4.59.0
 typing-extensions==3.10.0.0
 urllib3==1.26.7
