--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -2,11 +2,14 @@ alembic==1.7.1
 appdirs==1.4.4
 asgiref==3.4.1
 astroid==2.5.1
+bcrypt==3.2.0
 cachetools==4.2.4
 certifi==2021.10.8
+cffi==1.15.0
 charset-normalizer==2.0.7
 click==7.1.2
 colorama==0.4.4
+cryptography==36.0.1
 cssselect==1.1.0
 cssutils==2.3.0
 cycler==0.11.0
@@ -41,16 +44,19 @@ neat-python==0.92
 nltk==3.5
 numpy==1.20.1
 packaging==21.3
+paramiko==2.9.1
 passlib==1.7.4
 pika==1.2.0
 Pillow==8.4.0
 premailer==3.10.0
 promise==2.3
 psycopg2-binary==2.9.1
+pycparser==2.21
 pydantic==1.8.2
 pygame==2.0.2
 PyJWT==2.1.0
 pylint==2.7.2
+PyNaCl==1.4.0
 pyotp==2.6.0
 pyparsing==3.0.6
 python-dateutil==2.8.2
