--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic==1.7.1
 appdirs==1.4.4
 asgiref==3.4.1
 astroid==2.5.1
+attrs==21.4.0
 bcrypt==3.2.0
 cachetools==4.2.4
 certifi==2021.10.8
@@ -9,6 +10,7 @@ cffi==1.15.0
 charset-normalizer==2.0.7
 click==7.1.2
 colorama==0.4.4
+coverage==6.2
 cryptography==36.0.1
 cssselect==1.1.0
 cssutils==2.3.0
@@ -30,6 +32,7 @@ idna==3.3
 image==1.5.33
 importlib-resources==5.4.0
 inflect==5.3.0
+iniconfig==1.1.1
 isort==5.7.0
 joblib==1.0.1
 kiwisolver==1.3.2
@@ -48,9 +51,11 @@ paramiko==2.9.1
 passlib==1.7.4
 pika==1.2.0
 Pillow==8.4.0
+pluggy==1.0.0
 premailer==3.10.0
 promise==2.3
 psycopg2-binary==2.9.1
+py==1.11.0
 pycparser==2.21
 pydantic==1.8.2
 pygame==2.0.2
@@ -59,6 +64,8 @@ pylint==2.7.2
 PyNaCl==1.4.0
 pyotp==2.6.0
 pyparsing==3.0.6
+pytest==6.2.5
+pytest-cov==3.0.0
 python-dateutil==2.8.2
 python-dotenv==0.18.0
 python-multipart==0.0.5
@@ -88,4 +95,3 @@ websockets==8.1
 Whoosh==2.7.4
 wrapt==1.12.1
 zipp==3.6.0
-fastapi-route-logger-middleware==0.2.3
